--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -24,7 +24,7 @@
 
   .title {
     font-size: 1.4em;
-    font-family: 'Gilroy-Regular';
+    font-family: 'TTNorms-Medium';
     color: #326671;
     margin-bottom: 10px !important;
   }
@@ -106,7 +106,7 @@
   .author {
     a {
       color: #105a6d;
-      font-family: Gilroy-SemiBold;
+      font-family: TTNorms-Bold;
 
       &:hover {
         text-decoration: none;
