--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -98,7 +98,7 @@
 		margin: 15px 0;
 		text-transform: none;
     font-size: 1em;
-		font-family: Gilroy-Regular,sans-serif;
+		font-family: 'TTNorms-Regular',sans-serif;
 		font-size: .9em;
     line-height: 1.5;
 
@@ -196,7 +196,7 @@
 			padding: 10px 0;
 			font-size: 18px;
 			font-weight: 200;
-			font-family: 'Gilroy-SemiBold', serif;
+			font-family: 'TTNorms-Bold', serif;
 			transition: all 0.2s ease;
 			border-bottom: 1px dashed rgba(255, 255, 255, 0.23) !important;
 			line-height: 1;
@@ -229,14 +229,14 @@
 
 			.single-author-name {
 				font-size: 0.9em !important;
-				font-family: 'Gilroy-SemiBold', sans-serif !important;
+				font-family: 'TTNorms-Medium', sans-serif !important;
 				color: #fff;
 			}
 
 			.role {
 				color: hsla(0, 0%, 100%, 0.7);
 				display: block;
-				font-family: 'Gilroy-Regular';
+				font-family: 'TTNorms-Medium';
 				font-size: 0.8em;
 				line-height: 1.2;
 				margin-top: 6px;
@@ -293,10 +293,10 @@
 		margin: 0 8px 8px 0;
 		flex-grow: 1;
 		text-align: center;
-		font-family: Gilroy-Regular;
+		font-family: 'TTNorms-Regular';
 		transition: all 0.3s ease-out;
-		border-right: 1px solid #173144;
-		border-bottom: 1px solid #173144;
+		border-right: 2px solid rgba(3, 19, 30, 0.86);
+		border-bottom: 2px solid rgba(3, 19, 30, 0.86);
 
 		&:hover {
 			background: @white;
