--- a/src/less/global/global.less
+++ b/src/less/global/global.less
@@ -63,7 +63,7 @@ a {
 .h1,
 h1 {
 	color: @h1-color;
-	font-family: 'ProductSans-Bold', 'Gilroy-Regular', 'Gilroy-SemiBold', sans-serif;
+	font-family: 'ProductSans-Bold', 'TTNorms-Medium', 'TTNorms-Bold', sans-serif;
 	font-size: 2.5em;
 	font-weight: 500;
 	color: @header-color;
@@ -77,14 +77,14 @@ h2,
 h4,
 h5,
 h6 {
-	font-family: 'Gilroy-Regular', 'Gilroy-SemiBold', serif;
+	font-family: 'TTNorms-Medium', 'TTNorms-Bold', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
 }
 
 h3 {
-	font-family: 'Gilroy-SemiBold', serif;
+	font-family: 'TTNorms-Bold', serif;
 	font-weight: 700;
 	color: @header-color;
 	font-display: block;
@@ -98,7 +98,7 @@ h1 {
 .h2,
 h2 {
 	font-size: 2.2em;
-	font-family: 'Gilroy-SemiBold', 'Gilroy-SemiBold';
+	font-family: 'TTNorms-Bold', 'TTNorms-Bold';
 	@media(max-width: 600px) {
 		font-size: 2em;
 	}
@@ -128,7 +128,7 @@ h5 {
 	font-size: 1.4em;
 	font-weight: 500;
 	margin: 5px 0 0;
-	font-family: 'Gilroy-SemiBold', serif;
+	font-family: 'TTNorms-Bold', serif;
 	color: @text-color-heading;
 	line-height: 1;
 	text-align: left;
@@ -218,7 +218,7 @@ textarea {
 
 blockquote {
 	border-left: 4px solid @theme-color;
-	font-family: 'Gilroy-SemiBold', serif;
+	font-family: 'TTNorms-Bold', serif;
 	font-style: italic;
 }
 
