--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -32,7 +32,7 @@
       .tag-name {
         font-size: 2.2em;
         color: white !important;
-        font-family: Gilroy-SemiBold;
+        font-family: TTNorms-Bold;
         text-shadow: 0 0 20px #2f2d56;
         margin-top: 110px;
       }
@@ -43,7 +43,7 @@
         max-width: 90%;
         margin: 20px auto 0;
         color: white;
-        font-family: Gilroy-Regular;
+        font-family: TTNorms-Medium;
         text-shadow: 0 0 20px #2f2d56;
       }
     }
@@ -79,7 +79,7 @@
 
       .post-excerpt {
         font-size: 1em;
-        font-family: 'Gilroy-Regular';
+        font-family: 'TTNorms-Medium';
         min-height: 70px;
         margin-bottom: 50px;
         font-weight: 600;
