--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -39,7 +39,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'Gilroy-Regular',sans-serif !important;
+			font-family: 'TTNorms-Medium',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -52,7 +52,7 @@
 			}
 
 			a {
-				font-family: 'Gilroy-Medium',sans-serif !important;
+				font-family: 'TTNorms-Medium',sans-serif !important;
 			}
 
 			* {
@@ -114,7 +114,7 @@
 			Line-height: 1.15;
 			margin: 0 0 10px;
 			font-weight: 900;
-			font-family: 'ProductSans-Bold', 'Gilroy-Regular';
+			font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 			@media(max-width: 600px) {
 				font-size: 1.65em;
 				margin: 0 0 10px;
@@ -131,7 +131,7 @@
 					color: @secondary-color;
 				}
 				@media(max-width: 600px) {
-					font-family: 'ProductSans-Bold', 'Gilroy-Regular';
+					font-family: 'ProductSans-Bold', 'TTNorms-Medium';
 					font-weight: 500;
 				}
 			}
@@ -144,9 +144,9 @@
 			text-align: left;
 			font-size: 1.3em;
 			color: #153b52;
-			font-family: 'ProductSans-Medium', 'Gilroy-SemiBold',Gilroy-Regular,serif;
+			font-family: 'ProductSans-Medium', 'TTNorms-Bold',TTNorms-Medium,serif;
 			@media(max-width: 600px) {
-				font-family: 'ProductSans-Regular',Gilroy-SemiBold,Gilroy-Regular,serif;
+				font-family: 'ProductSans-Regular',TTNorms-Bold,TTNorms-Medium,serif;
 				font-size: 1em !important;
 				-webkit-line-clamp: 2;
 				-webkit-box-orient: vertical;
@@ -193,7 +193,7 @@
 		display: flex;
 		align-items: center;
 		flex-direction: row;
-		font-family: 'Gilroy-Regular', sans-serif;
+		font-family: 'TTNorms-Medium', sans-serif;
 		width: 100%;
 		justify-content: space-between;
 		max-width: 440px;
@@ -207,7 +207,7 @@
 
 		a {
 			color: #5aa8bf;
-			font-family: 'Gilroy-SemiBold','Gilroy-Regular', 'sans-serif';
+			font-family: 'TTNorms-Bold','TTNorms-Medium', 'sans-serif';
 		}
 
 		.author-mobile {
@@ -232,7 +232,7 @@
 				}
 
 				.mobile-date {
-					font-family: 'Gilroy-Regular';
+					font-family: 'TTNorms-Medium';
 					font-size: .9em;
 				}
 			}
@@ -241,7 +241,7 @@
 				text-transform: capitalize;
 				line-height: 1;
 				font-size: 1em;
-				font-family: 'Gilroy-SemiBold';
+				font-family: 'TTNorms-Bold';
 				color: #224a69;
 			}
 			@media (max-width: 800px) {
@@ -251,7 +251,7 @@
 
 		.meta-item {
 			display: flex;
-			font-family: 'Gilroy-SemiBold','Gilroy-Regular';
+			font-family: 'TTNorms-Bold','TTNorms-Medium';
 			align-items: center;
 			font-size: 16px;
 			padding: 0;
@@ -277,7 +277,7 @@
 				span {
 					line-height: 1.2;
 					font-size: 12px;
-					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
+					font-family: 'TTNorms-Bold','TTNorms-Medium';
 				}
 
 				i {
@@ -315,7 +315,7 @@
 			&.author,
 			&.author-mobile {
 				span {
-					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
+					font-family: 'TTNorms-Medium', sans-serif;
 					color: #4e6473;
 					line-height: 1;
 					overflow: hidden;
@@ -340,7 +340,7 @@
 
 			&.date {
 				span {
-					font-family: 'Gilroy-SemiBold','Gilroy-Regular';
+					font-family: 'TTNorms-Medium', sans-serif;
 					color: #687088 !important;
 					overflow: hidden;
 					white-space: nowrap;
@@ -408,7 +408,7 @@
 		border-right: 2px solid #009c83;
 		border-bottom: 2px solid #009c83;
 		background: linear-gradient(135deg,#4fc388,#21b6b7);
-		font-family: 'Gilroy-SemiBold',serif;
+		font-family: 'TTNorms-Bold',serif;
 		font-size: 18px;
 		font-weight: 600;
 		line-height: 1;
@@ -424,7 +424,7 @@
 			display: none;
 			padding: 13px 18px;
 			font-size: 14px;
-			font-family: 'Gilroy-Regular',serif;
+			font-family: 'TTNorms-Medium',serif;
 		}
 	}
 }
