--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -36,7 +36,7 @@
 			width: 90%;
 			color: #234969;
 			font-size: 1em;
-			font-family: 'Gilroy-Regular',sans-serif!important;
+			font-family: 'TTNorms-Medium',sans-serif!important;
 			font-weight: 200;
 			-webkit-transition: 0.3s all;
 			transition: 0.3s all;
@@ -68,7 +68,7 @@
 
 	#nav-search {
 		font-size: 1em;
-		font-family: 'Gilroy-Regular',sans-serif!important;
+		font-family: 'TTNorms-Medium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -147,7 +147,7 @@
 
 	#my-custom-results {
 		font-size: 1em;
-		font-family: 'Gilroy-Regular',sans-serif!important;
+		font-family: 'TTNorms-Medium',sans-serif!important;
 		font-weight: 200;
 		transition: 0.3s all;
 		outline: none;
@@ -213,6 +213,7 @@
 						display: block;
 						width: fit-content;
 
+
 						i {
 							margin-right: 4px;
 							font-size: 0.7em;
@@ -244,7 +245,7 @@
 			-o-transition: all 0.2s ease;
 			transition: all 0.2s ease;
 			background: #daebf9;
-			font-family: 'Gilroy-Medium';
+			font-family: 'TTNorms-Regular',sans-serif;
 			flex-grow: 1;
 			text-align: center;
 			.transition(all 0.2s ease);
@@ -455,8 +456,7 @@
 			letter-spacing: 0;
 			font-size: 16px;
 			margin: 0;
-			font-family: 'Gilroy-Medium',sans-serif;
-			font-weight: 600;
+			font-family: 'TTNorms-Medium',sans-serif;
 			display: inline-block;
 		}
 
@@ -527,7 +527,7 @@
 		line-height: 1.4;
 		font-size: 15px;
 		margin: 0;
-		font-family: 'Gilroy-SemiBold', sans-serif;
+		font-family: 'TTNorms-Bold', sans-serif;
 		display: inline-block;
 
 		&:hover {
@@ -554,7 +554,7 @@
 		letter-spacing: 1px;
 		margin-top: 0;
 		white-space: nowrap;
-		font-family: Gilroy-SemiBold,Gilroy-SemiBold,serif;
+		font-family: 'TTNorms-Bold',serif;
 		@media(max-width: 1040px) {
 			font-size: 1.3em !important;
 		}
@@ -565,6 +565,7 @@
 		font-size: 1em;
 		line-height: 1.8;
 		padding-right: 0;
+		font-family: 'TTNorms-Medium',sans-serif;
 	}
 }
 
@@ -577,9 +578,8 @@
 	.post-title {
 		a {
 			color: #208cad;
-			font-family: 'Gilroy-Medium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			transition: all 0.2s ease;
-			font-weight: 600;
 
 			&:hover {
 				cursor: pointer;
@@ -592,7 +592,7 @@
 		margin-bottom: 15px;
 		text-transform: uppercase;
 		font-size: 1.5em;
-		font-family: 'ProductSans-Medium',Gilroy-SemiBold,serif;
+		font-family: 'ProductSans-Medium',TTNorms-Bold,serif;
 		color: @header-color;
 		font-weight: 500;
 	}
@@ -603,7 +603,7 @@
 		font-weight: 500;
 		margin-bottom: 8px;
 		text-transform: uppercase;
-		font-family: 'Gilroy-SemiBold',Gilroy-SemiBold,serif;
+		font-family: 'TTNorms-Bold',TTNorms-Bold,serif;
 		letter-spacing: 2px;
 		color: #1f5373;
 	}
@@ -666,11 +666,11 @@
 			margin-bottom: 17px;
 			line-height: 1.35;
 			padding: 0 0 10px;
-			font-family: 'Gilroy-Medium' ,sans-serif;
+			font-family: 'TTNorms-Medium' ,sans-serif;
 
 			.post-title,
 			.single-author-name {
-				font-family: 'Gilroy-Medium', sans-serif;
+				font-family: 'TTNorms-Medium', sans-serif;
 				.transition(all 0.2s ease);
 				@media(max-width: 600px) {
 					text-align: left;
@@ -751,6 +751,7 @@
 		p {
 			margin-bottom: 10px;
 			font-size: 16px;
+			font-family: 'TTNorms-Medium',sans-serif;
 		}
 	}
 }
