--- a/src/less/pages/projects-page.less
+++ b/src/less/pages/projects-page.less
@@ -18,7 +18,7 @@
   }
 
   h3 {
-    font-weight: 500;
+    font-family: 'TTNorms-Medium',serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
@@ -242,7 +242,7 @@
         position: relative;
         width: 89%;
         font-weight: 100;
-        font-family: 'Gilroy-Medium',Gilroy-SemiBold;
+        font-family: 'TTNorms-Medium',TTNorms-Bold;
         /*  &::after {
           content: "";
           width: 90px;
@@ -403,7 +403,7 @@
               span {
                 color: #343434;
                 font-size: 12px;
-                font-family: 'Gilroy-Medium';
+                font-family: 'TTNorms-Medium';
                 margin-right: 5px;
               }
 
@@ -420,7 +420,7 @@
       .count {
         color: #ababab;
         font-size: 14px;
-        font-family: 'Gilroy-Regular',sans-serif;
+        font-family: 'TTNorms-Medium',sans-serif;
         bottom: 0;
         padding: 4px;
         float: right;
