--- a/src/less/pages/repos.less
+++ b/src/less/pages/repos.less
@@ -13,9 +13,8 @@
 }
 
 .repo-title {
-  font-family: 'Gilroy-Regular',serif;
+  font-family: 'TTNorms-Medium',serif;
   font-size: 18px !important;
-  font-weight: 600 !important;
 
   &:hover {
     color: white;
