--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -80,7 +80,7 @@
       position: relative;
 
       span {
-        font-family: 'Gilroy-Regular','Gilroy-Regular', '' !important;
+        font-family: 'TTNorms-Medium','TTNorms-Medium', '' !important;
         color: #435663;
         line-height: 1;
         overflow: hidden;
@@ -104,7 +104,7 @@
       text-transform: capitalize;
       line-height: 1;
       font-size: 1em;
-      font-family: 'Gilroy-Regular','Gilroy-SemiBold';
+      font-family: 'TTNorms-Medium','TTNorms-Bold';
       color: #224a69;
     }
     @media (max-width: 600px) {
