--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -105,7 +105,7 @@ blockquote .language-python {
       margin-bottom: 0;
       margin-left: -6%;
       padding: 8px 40px;
-      font-family: 'Gilroy-Regular';
+      font-family: 'TTNorms-Medium';
       font-size: 1.15em;
       font-style: normal;
       font-variant: normal;
@@ -508,7 +508,7 @@ blockquote .language-python {
   .language-css,
   .language-endpoint,
   .language-handlebars {
-    background: linear-gradient(#2d2947, #171924)!important;
+    background: linear-gradient(#3b3851,#24202f)!important;
     color: #d0e1f6;
 
     .tag {
@@ -583,7 +583,7 @@ blockquote .language-python {
       margin-bottom: 0;
       margin-left: -6%;
       padding: 8px 40px;
-      font-family: Gilroy-Regular;
+      font-family: TTNorms-Medium;
       font-size: 1.3em;
       font-style: normal;
       font-variant: normal;
