--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -38,7 +38,7 @@
 			transition: all .3s;
 			line-height: 1;
 			padding: 8px 10px;
-			font-family: 'Gilroy-SemiBold';
+			font-family: 'TTNorms-Bold';
 			@media(max-width:800px) {
 				margin: 0 0 8px;
 			}
