--- a/src/less/posts/redis3.css
+++ b/src/less/posts/redis3.css
@@ -43,7 +43,7 @@
   margin: 0 auto 1em;
   width: auto;
   color: #424446;
-  font-family: Gilroy-Regular;
+  font-family: TTNorms-Medium;
   font-size: 2em;
   font-size: 1.8em;
   font-weight: 400!important;
