--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -41,13 +41,13 @@ table {
 
     th {
       text-align: center;
-      font-family: 'Gilroy-Regular';
+      font-family: 'TTNorms-Medium';
       min-width: 30px;
       padding: 10px;
       font-size: 0.9em;
 
       &::before {
-        font-family: 'Gilroy-SemiBold' !important;
+        font-family: 'TTNorms-Bold' !important;
       }
     }
   }
@@ -152,7 +152,7 @@ th {
 
       th {
         display: block;
-        font-family: 'Gilroy-Regular' !important;
+        font-family: 'TTNorms-Medium' !important;
         text-align: center;
         text-align: left;
         text-transform: uppercase;
@@ -228,7 +228,7 @@ th {
 
 .dataframe thead th {
   text-align: center !important;
-  font-family: 'Gilroy-SemiBold' !important;
+  font-family: 'TTNorms-Bold' !important;
 }
 
 .dataframe tbody tr th:only-of-type {
