--- a/src/less/global/searchbar.less
+++ b/src/less/global/searchbar.less
@@ -15,7 +15,7 @@ header{
   height: 80px;
 
   .logo {
-    height: 45px;
+    height: 41px;
     width: 230px;
     position: absolute;
     left: 0;
@@ -223,7 +223,7 @@ header{
   width: 226px;
   position: absolute;
   font-size: 1em;
-  font-family: 'Gilroy-Regular',sans-serif!important;
+  font-family: 'TTNorms-Medium',sans-serif!important;
   font-weight: 200;
   transition: 0.3s all;
   outline: none;
@@ -248,7 +248,7 @@ header{
 
     a {
       font-size: .8em;
-      font-family: Gilroy-Regular;
+      font-family: TTNorms-Medium;
     }
 
     &:nth-child(even) {
