--- a/src/less/pages/series.less
+++ b/src/less/pages/series.less
@@ -84,11 +84,11 @@
       }
 
       .sort-title {
-        font-family: 'Gilroy-SemiBold';
+        font-family: 'TTNorms-Bold';
       }
 
       .sort-method {
-        font-family: 'Gilroy-Regular';
+        font-family: 'TTNorms-Medium';
       }
     }
   }
@@ -123,7 +123,7 @@
       padding: 10px;
       background: #1ab1d4;
       color: #fff;
-      font-family: 'Gilroy-SemiBold';
+      font-family: 'TTNorms-Bold';
       box-shadow: 1px 1px 1px rgba(55, 70, 99, 0.9);
       line-height: 1;
     }
@@ -163,13 +163,13 @@
         .post-title {
           font-weight: 900;
           width: 100%;
-          margin: 0 0 15px;
+          margin: 0 0 5px;
           font-size: 1.3em;
 
           a {
             font-family: 'ProductSans-Regular',sans-serif;
             font-size: 1em;
-            line-height: 1.3;
+            line-height: 1.2;
             color: @text-color-heading;
             transition: all 0.2s ease-out;
             @media(max-width: 600px) {
@@ -189,7 +189,7 @@
 
         .post-excerpt {
           color: #153b52;
-          font-family: 'ProductSans-Regular','Gilroy-Regular',serif;
+          font-family: 'ProductSans-Regular','TTNorms-Medium',serif;
           font-size: 1em;
           font-weight: 100;
           line-height: 1.21;
@@ -202,7 +202,7 @@
         }
 
         .postcount {
-          font-family: 'Gilroy-Regular',serif;
+          font-family: 'TTNorms-Medium',serif;
           font-size: 1.3em;
         }
       }
@@ -214,7 +214,7 @@
         }
 
         .meta-item span {
-          font-family: 'Gilroy-Medium';
+          font-family: 'TTNorms-Medium';
         }
 
         .tags {
