--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -163,7 +163,7 @@
           margin: 5px 0;
           line-height: 1.5;
           text-align: left;
-          font-family: 'Gilroy-Regular';
+          font-family: 'TTNorms-Regular';
           flex-grow: 1;
           flex-shrink: 0;
           flex-basis: auto;
@@ -182,7 +182,7 @@
           bottom: 20px;
           right: 20px;
           font-size: 0.9em;
-          font-family: 'Gilroy-SemiBold';
+          font-family: 'TTNorms-Bold';
         }
       }
     }
