--- a/src/less/posts/comments.less
+++ b/src/less/posts/comments.less
@@ -115,7 +115,7 @@
 
       .textarea-container {
         width: 100%;
-        font-family: Gilroy-Regular;
+        font-family: TTNorms-Medium;
         /* max-width: 500px; */
         border: 1px solid #dcdcdc;
         border-radius: 0;
@@ -142,7 +142,7 @@
           -o-transition: height 0.15s cubic-bezier(.4,0,1,1);
           transition: height 0.15s cubic-bezier(.4,0,1,1);
           font-size: 1em;
-          font-family: 'Gilroy-Regular';
+          font-family: 'TTNorms-Medium';
           min-height: 70px;
           width: -webkit-fill-available;
         }
@@ -191,7 +191,7 @@
           overflow: hidden;
           margin-left: 20px;
           font-size: 1em;
-          font-family: Gilroy-Regular;
+          font-family: TTNorms-Medium;
           min-height: 70px;
           width: -webkit-fill-available;
 
