--- a/src/less/posts/linkpreview.less
+++ b/src/less/posts/linkpreview.less
@@ -2,7 +2,7 @@
 @import "../global/mixin.less";
 
 .link-preview {
-  padding: 10px 15px;
+  padding: 15px;
   transition: all 0.2s ease-out;
   border-radius: 2px;
   margin: 20px auto 30px;
@@ -22,8 +22,6 @@
     width: 96%;
     padding: 0;
   }
-
-
 
   .detail-stack {
     position: relative;
@@ -52,6 +50,9 @@
       max-height: 200px;
       max-width: 250px;
       margin-right: 30px;
+      border: 1px solid rgba(206, 206, 206, 0.54);
+      background: white;
+      border-radius: 5px;
 
       @media(max-width: 600px) {
         width: 100%;
@@ -124,8 +125,8 @@
     }
 
     .title-desktop {
-      margin: 10px 0 10px!important;
-      font-family: 'ProductSans-Regular',Gilroy-SemiBold,serif;
+      margin: 0 0 10px!important;
+      font-family: 'ProductSans-Regular',TTNorms-Bold,serif;
       font-size: 1.3em;
       line-height: 1.3;
       text-align: left;
@@ -137,7 +138,7 @@
     .title-mobile {
       display: none;
       margin: 10px 0 20px!important;
-      font-family: ProductSans-Regular,Gilroy-SemiBold,serif;
+      font-family: ProductSans-Regular,TTNorms-Bold,serif;
       font-size: 1.2em;
       line-height: 1.2;
       font-size: 1.2;
@@ -164,13 +165,13 @@
       font-size: .9em;
       text-overflow: ellipsis;
       display: -webkit-box;
-      font-family: 'Gilroy-Regular' !important;
-      -webkit-line-clamp: 6;
+      -webkit-line-clamp: 4;
+      font-family: 'TTNorms-Regular' !important;
       overflow: hidden;
       text-align: left;
-      display: -webkit-box;
       -webkit-box-orient: vertical;
       overflow: hidden;
+      max-height: 70px;
       @media(max-width: 600px) {
         display: none;
       }
