--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -56,7 +56,7 @@
 		margin: 35px 60px 0;
 		line-height: 1.2;
 		display: block;
-		font-family: 'ProductSans-Bold', 'Gilroy-SemiBold' !important;
+		font-family: 'ProductSans-Bold', 'TTNorms-Bold' !important;
 		font-size: 2.2em;
 		font-weight: 600;
 		letter-spacing: 0;
@@ -80,7 +80,7 @@
 		a {
 			color: @h1-color;
 			transition: all 0.2s ease-out;
-			font-family: 'ProductSans-Bold', 'Gilroy-SemiBold' !important;
+			font-family: 'ProductSans-Bold', 'TTNorms-Bold' !important;
 
 			&:hover {
 				color: @secondary-color;
@@ -99,14 +99,14 @@
 		margin: 0 60px 25px;
 		line-height: 1.3;
 		color: @h1-color;
-		font-family: 'ProductSans-Regular', 'Gilroy-Regular';
+		font-family: 'ProductSans-Regular', 'TTNorms-Medium';
 		@media(max-width: 800px) {
 			margin: 10px 60px 40px;
 		}
 		@media(max-width: 600px) {
 			font-weight: 300;
 			font-size: 1.1em;
-			font-family: Gilroy-SemiBold;
+			font-family: TTNorms-Bold;
 			max-width: 95%;
 			margin: 0 25px;
 		}
@@ -360,8 +360,12 @@
 					justify-content: space-between;
 				}
 
+				i {
+					font-weight: 400;
+				}
+
 				span {
-					font-family: 'ProductSans-Regular',sans-serif;
+					font-family: 'TTNorms-Medium',sans-serif;
 					font-weight: 500;
 				}
 
@@ -435,7 +439,6 @@
 					font-size: 1.1em;
 					color: #40627b;
 					padding: 0;
-					font-weight: 200;
 					@media(max-width: 600px) {
 						font-size: 1.1em;
 					}
@@ -500,7 +503,7 @@
 
 		a {
 			color: @theme-color;
-			font-family: 'Gilroy-Medium';
+			font-family: 'TTNorms-Medium';
 		}
 
 		p > a {
@@ -577,7 +580,7 @@
 			background: #e9f3f7;
 			color: #416e7d;
 			padding: 20px;
-			font-family: 'Gilroy-Medium',sans-serif;
+			font-family: 'TTNorms-Medium',sans-serif;
 			font-style: none;
 			font-size: 1em;
 			line-height: 1.6;
@@ -595,7 +598,7 @@
 			}
 
 			* {
-				font-family: 'Gilroy-Medium',sans-serif;
+				font-family: 'TTNorms-Medium',sans-serif;
 				font-weight: 500;
 				line-height: 1.6;
 				font-size: .9em;
@@ -995,7 +998,7 @@
 		.author {
 			font-size: 1.5em;
 			margin-bottom: 10px;
-			font-family: 'Gilroy-SemiBold', '';
+			font-family: 'TTNorms-Bold', '';
 			@media(max-width: 600px) {
 				font-size: 1.3em;
 			}
