--- a/src/less/posts/redis.less
+++ b/src/less/posts/redis.less
@@ -46,7 +46,7 @@ margin: auto;
     margin: 0 auto 1em;
     width: auto;
     color: #424446;
-    font-family: Gilroy-Regular;
+    font-family: TTNorms-Medium;
     font-size: 2em;
     font-size: 1.8em;
     font-weight: 400!important;
