--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -49,7 +49,7 @@
 			} else {
 				// Otherwise, add a link to the page
 				// This is where all the customization can go, space between each link, commas, etc.
-				nav.innerHTML = nav.innerHTML + "<a href=/page/" + i + ">" + i + "</a>";
+				nav.innerHTML = nav.innerHTML + "<a href=" + url + "/page/" + i + ">" + i + "</a>";
 			}
 		}
 	}
