--- a/partials/pagination.hbs
+++ b/partials/pagination.hbs
@@ -24,7 +24,8 @@
 	//Grab the pagination span element
 	var nav = document.getElementById('pagination-list');
 
-	var url = window.location.href
+	var url = window.location.href.split('/page')[0];
+	console.log(url);
 
 	if (pageTotal == 1) {
 		$('#pagination-list').css('display', 'none');
