code and related article style fixes

--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -66,7 +66,7 @@ blockquote .language-python {
     padding: 3px 6px;
     border-radius: 2px;
     font-weight: 600;
-    font-size: .9em;
+    font-size: .8em;
     font-family: 'AFParseGroteskMono-Light';
   }
 
@@ -223,8 +223,11 @@ blockquote .language-python {
 
   .json,
   .language-json {
+    line-height: 1.4 !important;
+
     .attr {
       color: #e471a6;
+      font-family: 'AFParseGroteskMono-Regular';
     }
 
     .string {
