--- a/src/less/posts/article-preview.less
+++ b/src/less/posts/article-preview.less
@@ -5,7 +5,6 @@
   width: 32%;
   transition: all 0.3s ease-out;
   position: relative;
-  /*min-height: 300px;*/
   box-shadow: 0 0 5px rgba(80,82,204,.1)!important;
   @media(max-width: 600px) {
     margin: 5px 20px;
@@ -16,6 +15,11 @@
     border-right: 2px solid #dcdcdc!important;
     border-bottom: 2px solid #dcdcdc!important;
     display: flex;
+
+    &:hover {
+      border-right: 2px solid #849ab6!important;
+      border-bottom: 2px solid #849ab6!important;
+    }
 
     a {
       display: flex;
@@ -51,7 +55,7 @@
     font-size: 1.2em !important;
     margin-top: 0 !important;
     min-height: 69px;
-    font-weight: 500;
+    font-family: 'ProductSans-Medium';
     @media(max-width: 600px) {
       font-size: 1.1em !important;
     }
@@ -113,7 +117,7 @@
   }
 
   .description {
-    padding: 20px;
+    padding: 15px 20px;
     color: @text-color;
     @media(max-width: 600px) {
       padding: 15px;
