--- a/src/less/posts/post.less
+++ b/src/less/posts/post.less
@@ -143,7 +143,7 @@
 		font-size: 1.3em;
 		line-height: 1.2;
 		color: #365c8e;
-		font-weight: 600;
+		font-weight: 500;
 		margin-top: 50px;
 		color: @header-color;
 		margin-bottom: 12px;
@@ -350,7 +350,7 @@
 				display: flex;
 				width: auto;
 				align-items: center;
-				justify-content: left;
+				 justify-content: space-between;
 				@media(max-width: 600px) {
 					padding: 0;
 					max-width: none;
