modified widget displays on homepage

--- a/src/less/global/social.less
+++ b/src/less/global/social.less
@@ -29,7 +29,7 @@
 }
 
 .social-btns .btn.facebook:before {
-  background-color: #3b5998;
+  background-color: #193e8a;
 }
 
 .btn.facebook .fa {
@@ -37,7 +37,7 @@
 }
 
 .btn.twitter:before {
-  background-color: #3cf;
+  background-color: #008ebd;
 }
 
 .btn.twitter .fa {
@@ -61,7 +61,7 @@
 }
 
 .btn.linkedin:before {
-  background-color: #4875B4;
+  background-color: #06367c;
 }
 
 .btn.tumblr:before {
@@ -90,7 +90,7 @@
 }
 
 .btn.ycombinator:before {
-  background-color: #b75b20;
+  background-color: #9f470e;
 }
 
 .btn.rss .fa {
