--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -227,7 +227,7 @@ blockquote .language-python {
 
     .attr {
       color: #e471a6;
-      font-family: 'AFParseGroteskMono-Regular';
+      font-family: 'AFParseGroteskMono-Bold';
     }
 
     .string {
