--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -4,10 +4,10 @@
 	<div>
 		{{#get "tags" filter="feature_image:-null" include="count.posts,meta_title,slug" order="count.posts DESC"}}
     {{#foreach tags visibility="internal"}}
-      <div class="recent-single-post">
-				<div class="series-image {{slug}}"></div>
+      <div class="recent-single-post seriesitem {{slug}}">
+				<div class="series-image"></div>
 				<div class="series-info">
-        <a href="{{url}}" class="post-title">{{meta_title}}</a>
+        <a href="{{url}}" class="post-title"><span style="display:inline-block; line-height:1;">{{meta_title}}</span></a>
         {{!--<span class="count">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>--}}
         {{#if description}}
           <p class="description">{{description}}</p>
