modified widget displays on homepage

--- a/partials/widget-series.hbs
+++ b/partials/widget-series.hbs
@@ -7,7 +7,7 @@
       <div class="recent-single-post seriesitem {{slug}}">
 				<div class="series-image"></div>
 				<div class="series-info">
-        <a href="{{url}}" class="post-title"><span style="display:inline-block; line-height:1;">{{meta_title}}</span></a>
+        <a href="/series/{{slug}}/" class="post-title"><span style="display:inline-block; line-height:1;">{{meta_title}}</span></a>
         {{!--<span class="count">{{plural count.posts empty=(t "0 Post") singular=(t "% Post") plural=(t "% Posts")}}</span>--}}
         {{#if description}}
           <p class="description">{{description}}</p>
