--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -408,7 +408,7 @@
 		border-right: 2px solid #009c83;
 		border-bottom: 2px solid #009c83;
 		background: linear-gradient(135deg,#4fc388,#21b6b7);
-		font-family: 'TTNorms-Bold',serif;
+		font-family: 'ProductSans-Medium,serif',serif;
 		font-size: 18px;
 		font-weight: 600;
 		line-height: 1;
