--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -5,6 +5,10 @@ table,
 td,
 th {
   border: none;
+  max-width: 150px;
+  overflow: hidden;
+  text-align: left;
+  padding: 15px 20px;
 }
 
 table {
@@ -240,6 +244,7 @@ th {
   box-shadow: 0 0 5px #d1d4e8;
   margin: 20px auto 40px;
   position: relative;
+  overflow: hidden;
   @media (max-width: 600px) {
     margin-left: calc(~"-50vw + 50%");
     margin-right: calc(~"-50vw + 50%");
