responsive tables working

--- a/src/less/posts/table.less
+++ b/src/less/posts/table.less
@@ -154,12 +154,14 @@ th {
 
       th {
         display: block;
-        font-family: 'TTNorms-Medium' !important;
+        padding: 10px 5px!important;
+        font-family: 'TTNorms-Regular';
+        letter-spacing: .5px;
         text-align: center;
         text-align: left;
-        text-transform: uppercase;
-        letter-spacing: 0.5px;
-        padding: 10px 5px !important;
+        text-transform: capitalize;
+        font-weight: 500;
+        font-size: .8em;
 
         * {
           font-size: 1em;
@@ -271,7 +273,7 @@ th {
   }
 }
 
-.tableFade {
+.tablefade {
   position: absolute;
   right: 0;
   height: 100%;
