--- a/src/less/global/widgets.less
+++ b/src/less/global/widgets.less
@@ -472,18 +472,18 @@
 
 			svg,
 			i {
-				width: 20px;
-				margin-right: 8px;
+				width: 24px;
+				margin-right: 10px;
 			}
 		}
 
 		.building-flask-apps svg {fill: #7b5195}
-		.data-analysis-pandas i {color: #896592}
+		.data-analysis-pandas i {color: #be90ca}
 		.code-snippet-corner svg {fill: #47638c}
-		.create-an-aws-api svg {fill: #bd975f}
+		.create-an-aws-api svg {fill: #cc9543}
 		.working-with-mysql svg {fill: #5f6bbd}
 		.mongodb-cloud svg {fill: #86af96}
-		.hacking-tableau-server svg {fill: #decf9a}
+		.hacking-tableau-server i {color: #d8a918}
 
 		.recent-single-post {
 			border-bottom: 1px solid #d5dde8;
