--- a/src/less/pages/projects-page.less
+++ b/src/less/pages/projects-page.less
@@ -18,7 +18,7 @@
   }
 
   h3 {
-    font-family: 'TTNorms-Medium',serif;
+    font-family: 'TTNorms-Regular',sans-serif;
     margin-bottom: 0;
     font-size: 1.4em;
   }
