--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -66,7 +66,7 @@
 		margin: 0 !important;
 		padding-left: 0 !important;
 		width: 100%;
-		height: 100%;
+		height: fit-content;
 		@media(max-width:800px) {
 			margin: auto;
 		}
@@ -95,7 +95,7 @@
 			a {
 				text-align: center;
 				display: block;
-				padding: 4px 8px 2px 5px!important;
+				padding: 5px 8px 5px 7px!important
 				width: -webkit-fill-available;
 			}
 
