--- a/src/less/global/postpreview.less
+++ b/src/less/global/postpreview.less
@@ -39,7 +39,7 @@
 			-webkit-line-clamp: 3;
 			-webkit-box-orient: vertical;
 			text-overflow: ellipsis;
-			font-family: 'TTNorms-Medium',sans-serif !important;
+			font-family: 'TTNorms-Regular',sans-serif !important;
 			line-height: 1.55;
 			font-size: 1em;
 			font-weight: 500;
@@ -144,7 +144,7 @@
 			text-align: left;
 			font-size: 1.3em;
 			color: #153b52;
-			font-family: 'ProductSans-Medium', 'TTNorms-Bold',TTNorms-Medium,serif;
+			font-family: 'ProductSans-Regular', 'TTNorms-Bold',TTNorms-Medium,serif;
 			@media(max-width: 600px) {
 				font-family: 'ProductSans-Regular',TTNorms-Bold,TTNorms-Medium,serif;
 				font-size: 1em !important;
