--- a/src/less/global/postlist.less
+++ b/src/less/global/postlist.less
@@ -32,7 +32,7 @@
       .tag-name {
         font-size: 2.2em;
         color: white !important;
-        font-family: TTNorms-Bold;
+        font-family: 'TTNorms-Medium';
         text-shadow: 0 0 20px #2f2d56;
         margin-top: 110px;
       }
