obsessively just fixing random crap

--- a/src/less/global/author-card.less
+++ b/src/less/global/author-card.less
@@ -23,8 +23,9 @@
   }
 
   .title {
-    font-size: 1.4em;
-    font-family: 'TTNorms-Medium';
+    font-family: 'TTNorms-Regular';
+    font-size: 1.3em;
+    font-weight: 600;
     color: #326671;
     margin-bottom: 10px !important;
   }
@@ -99,14 +100,14 @@
     max-width: 450px;
     padding: 0 25px 30px;
     text-align: center;
-    text-align: justify;
+    text-align: left;
     min-height: 70px;
   }
 
   .author {
     a {
       color: #105a6d;
-      font-family: TTNorms-Bold;
+      font-family: 'TTNorms-Medium';
 
       &:hover {
         text-decoration: none;
