--- a/src/less/pages/page.less
+++ b/src/less/pages/page.less
@@ -1,6 +1,12 @@
 @import "../global/variables.less";
 @import "../global/mixin.less";
 
+.page-template {
+  h1 {
+    font-weight: 100;
+  }
+}
+
 .page-slug {
   background: #ecf1f9;
   display: inline-block;
