--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -95,7 +95,7 @@
 			a {
 				text-align: center;
 				display: block;
-				padding: 5px 8px 5px 7px!important;
+				padding: 5px 10px 5px 7px !important
 				width: -webkit-fill-available;
 			}
 
