--- a/src/less/pages/tag-page.less
+++ b/src/less/pages/tag-page.less
@@ -53,7 +53,7 @@
     flex-wrap: wrap;
     align-content: flex-start;
     flex-flow: row wrap;
-    margin: 30px 40px 10px;
+    margin: 30px 40px 20px;
     @media(max-width: 800px) {
       margin: 30px 50px 20px;
     }
@@ -64,8 +64,8 @@
     .tag-wrapper {
       background: #025fa5;
       background: #f4fcff;
-      width: 48%;
-      margin: 0 0 20px;
+      width: 48.5%;
+      margin: 0 0 15px;
       border: 1px solid #dadada;
       transition: all 0.3s ease-out;
       display: block;
@@ -155,6 +155,7 @@
           margin-top: 0;
           font-size: 1.3em;
           line-height: 1.2;
+          font-weight: 600;
         }
 
         p {
