--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -95,19 +95,11 @@
 			a {
 				text-align: center;
 				display: block;
-				padding: 5px 10px 5px 7px !important
+				padding: 5px 10px 5px 7px !important;
 				width: -webkit-fill-available;
 			}
 
 			&.facebook {
-			  /*
-
-				@media(max-width:600px) {
-					background-color: white !important;
-					i {
-						color: lighten(@facebook-color, 15%) !important;
-					}
-				}*/
 				&:hover {
 					background-color: lighten(@facebook-color, 15%);
 					box-shadow: lighten(@facebook-color, 35%) !important;
@@ -116,14 +108,6 @@
 			}
 
 			&.twitter {
-			  /*
-
-				@media(max-width:600px) {
-					background-color: white !important;
-					i {
-						color: lighten(@twitter-color, 5%)!important;
-					}
-				}*/
 				&:hover {
 					background-color: lighten(@twitter-color, 5%);
 					box-shadow: lighten(@twitter-color, 35%);
@@ -148,15 +132,6 @@
 			}
 
 			&.ycombinator {
-			  /*
-
-				@media(max-width:600px) {
-					background-color: white !important;
-					i {
-						color: lighten(@rss-color, 15%) !important;
-					}
-				}*/
-
 				&:hover {
 					background-color: lighten(@rss-color, 15%);
 					box-shadow: lighten(@rss-color, 35%);
